--- a/style.css
+++ b/style.css
@@ -1,83 +1,133 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
 }
 
-body{
-    background: #323453;
-    color: #fff;
-}
-h1{
-    text-align: center;
-    margin: 100px auto 50px;
-}
-
-form{
+.hero{
     width: 100%;
-    max-width: 550px;
-    background: #434989;
+    min-height: 100vh;
+    background: linear-gradient(45deg, #15a16c, #35346984);
     display: flex;
     align-items: center;
-    margin: 0 auto;
-    height: 80px;
-    border-radius: 10px;
-}
-
-form input{
-    flex: 1;
-    padding: 10px 20px;
-    background: transparent;
-    outline: 0;
-    border: 0;
+    justify-content: center;
+    flex-direction: column;
     color: #fff;
-    font-size:16px;
 }
 
-input::placeholder{
-    color: #fff;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+.hero h1{
+    font-size: 45px;
+    font-weight: 500;
+    margin-top: -50px;
+    margin-bottom: 50px;
 }
 
-form button{
-    background: red;
-    height: 80px;
-    padding: 0 30px;
-    border: 0;
-    outline: 0;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    color: #fff;
-    cursor: pointer;
-}
-
-#show-more-button{
-    margin: 50px 50%;
-    background: red;
-    outline: 0;
-    border: 0;
-    padding: 10px 30px;
+.hero h1 span{
     color: #fff;
     font-weight: bold;
-    font-size: 14px;
-    width: 140px;
-    cursor: pointer;
-    display: none;
 }
 
-#search-result{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 30px;
-    margin: 100px auto 50px;
-    width: 80%;
-}
-
-#search-result img{
-    width: 100%;
-    height: 230px;
+textarea{
+    padding: 20px;
+    width: 600px;
+    height: 250px;
+    background: #333336;
+    color: #fff;
+    font-size: 15px;
+    border: 0;
+    outline: 0;
     border-radius: 10px;
-    object-fit: cover;
+    margin-bottom: 30px;
+    resize: none;
 }
 
+textarea::placeholder{
+    font-size: 16px;
+    color: #fff;
+}
+
+.row{
+    width: 600px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+button{
+    background: blue;
+    color: #fff;
+    font-size: 16px;
+    padding: 10px 30px;
+    border-radius: 35px;
+    border: 0;
+    outline: 0;
+    cursor: pointer;
+    font-weight: bold;
+}
+select{
+    flex: 1;
+    color: #fff;
+    background: #333336;
+    height: 50px;
+    padding: 0 20px;
+    outline: 0;
+    border: 0;
+    border-radius: 35px;
+} 
+
+@media (max-width: 650px){
+
+    .hero {
+        width: 100%;
+        min-height: 100vh;
+        background: linear-gradient(45deg, #15a16c, #35346984);
+        color: #fff;
+        position: relative;
+    }
+    
+    .hero h1 {
+        font-size:40px;
+        font-weight: 500;
+        text-align: left;
+        padding-left: 20px;
+        position: absolute;
+        color: #ccc;
+        top: 100px;
+    }
+    textarea {
+        padding: 20px;
+        width: 90%;
+        height: 250px;
+        background: #333336;
+        color: #fff;
+        position: absolute;
+        left: 15px;
+        top: 150px;
+        font-size: 22px;
+    }
+    select {
+        color: #fff;
+        background: #333336;
+        height: 50px;
+        border-radius: 35px;
+        margin-top: 20px;
+        position: absolute;
+        width: 55%;
+        left: 18px;
+    }
+    button {
+        background: blue;
+        color: #fff;
+        font-size: 16px;
+        padding: 10px 30px;
+        border-radius: 35px;
+        border: 0;
+        outline: 0;
+        cursor: pointer;
+        font-weight: bold;
+        position: absolute;
+        right: 10%;
+        top: 49%;
+    }
+}
